Up to correlation

--- a/notebook/Fetch_Data.ipynb
+++ b/notebook/Fetch_Data.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fetch Data\n",
+    "- The purpose of this notebook is to fetch multiple REIT ETFs' data from Yahoo Finance and combine them into one dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -531,7 +539,7 @@
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
-   "number_sections": true,
+   "number_sections": false,
    "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
