--- a/Prophet.ipynb
+++ b/Prophet.ipynb
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-29T02:14:34.854737Z",
-     "start_time": "2021-06-29T02:14:18.414694Z"
+     "end_time": "2021-06-30T03:36:45.960582Z",
+     "start_time": "2021-06-30T03:36:43.866863Z"
     }
    },
    "outputs": [
@@ -37,8 +37,29 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pystan in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (2.19.1.1)\n",
-      "Requirement already satisfied: Cython!=0.25.1,>=0.22 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from pystan) (0.29.13)\n",
       "Requirement already satisfied: numpy>=1.7 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from pystan) (1.19.5)\n",
+      "Requirement already satisfied: Cython!=0.25.1,>=0.22 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from pystan) (0.29.13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pystan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-30T03:37:08.101174Z",
+     "start_time": "2021-06-30T03:36:49.264512Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Collecting fbprophet\n",
       "  Using cached fbprophet-0.7.1.tar.gz (64 kB)\n",
       "Requirement already satisfied: Cython>=0.22 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from fbprophet) (0.29.13)\n",
@@ -54,19 +75,19 @@
       "Requirement already satisfied: python-dateutil>=2.8.0 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from fbprophet) (2.8.1)\n",
       "Requirement already satisfied: tqdm>=4.36.1 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from fbprophet) (4.60.0)\n",
       "Requirement already satisfied: pytz>=2017.2 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from pandas>=1.0.4->fbprophet) (2020.1)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from matplotlib>=2.0.0->fbprophet) (2.4.7)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from matplotlib>=2.0.0->fbprophet) (1.2.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from matplotlib>=2.0.0->fbprophet) (2.4.7)\n",
       "Requirement already satisfied: cycler>=0.10 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from matplotlib>=2.0.0->fbprophet) (0.10.0)\n",
       "Requirement already satisfied: ephem>=3.7.5.3 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from LunarCalendar>=0.0.9->fbprophet) (4.0.0.2)\n",
       "Requirement already satisfied: pymeeus<=1,>=0.3.13 in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from convertdate>=2.1.2->fbprophet) (0.5.11)\n",
+      "Requirement already satisfied: six in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from holidays>=0.10.2->fbprophet) (1.15.0)\n",
       "Requirement already satisfied: korean-lunar-calendar in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from holidays>=0.10.2->fbprophet) (0.2.1)\n",
       "Requirement already satisfied: hijri-converter in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from holidays>=0.10.2->fbprophet) (2.1.3)\n",
-      "Requirement already satisfied: six in /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from holidays>=0.10.2->fbprophet) (1.15.0)\n",
       "Building wheels for collected packages: fbprophet\n",
       "  Building wheel for fbprophet (setup.py) ... \u001b[?25lerror\n",
       "\u001b[31m  ERROR: Command errored out with exit status 1:\n",
-      "   command: /opt/anaconda3/envs/learn-env/bin/python3.6 -u -c 'import sys, setuptools, tokenize; sys.argv[0] = '\"'\"'/private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-5hngizeg/fbprophet/setup.py'\"'\"'; __file__='\"'\"'/private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-5hngizeg/fbprophet/setup.py'\"'\"';f=getattr(tokenize, '\"'\"'open'\"'\"', open)(__file__);code=f.read().replace('\"'\"'\\r\\n'\"'\"', '\"'\"'\\n'\"'\"');f.close();exec(compile(code, __file__, '\"'\"'exec'\"'\"'))' bdist_wheel -d /private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-wheel-3d3ojmln\n",
-      "       cwd: /private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-5hngizeg/fbprophet/\n",
+      "   command: /opt/anaconda3/envs/learn-env/bin/python3.6 -u -c 'import sys, setuptools, tokenize; sys.argv[0] = '\"'\"'/private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-2oe50t74/fbprophet/setup.py'\"'\"'; __file__='\"'\"'/private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-2oe50t74/fbprophet/setup.py'\"'\"';f=getattr(tokenize, '\"'\"'open'\"'\"', open)(__file__);code=f.read().replace('\"'\"'\\r\\n'\"'\"', '\"'\"'\\n'\"'\"');f.close();exec(compile(code, __file__, '\"'\"'exec'\"'\"'))' bdist_wheel -d /private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-wheel-wl0mvmga\n",
+      "       cwd: /private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-2oe50t74/fbprophet/\n",
       "  Complete output (9 lines):\n",
       "  running bdist_wheel\n",
       "  running build\n",
@@ -85,8 +106,8 @@
       "Installing collected packages: fbprophet\n",
       "    Running setup.py install for fbprophet ... \u001b[?25lerror\n",
       "\u001b[31m    ERROR: Command errored out with exit status 1:\n",
-      "     command: /opt/anaconda3/envs/learn-env/bin/python3.6 -u -c 'import sys, setuptools, tokenize; sys.argv[0] = '\"'\"'/private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-5hngizeg/fbprophet/setup.py'\"'\"'; __file__='\"'\"'/private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-5hngizeg/fbprophet/setup.py'\"'\"';f=getattr(tokenize, '\"'\"'open'\"'\"', open)(__file__);code=f.read().replace('\"'\"'\\r\\n'\"'\"', '\"'\"'\\n'\"'\"');f.close();exec(compile(code, __file__, '\"'\"'exec'\"'\"'))' install --record /private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-record-7lr9gxpr/install-record.txt --single-version-externally-managed --compile --install-headers /opt/anaconda3/envs/learn-env/include/python3.6m/fbprophet\n",
-      "         cwd: /private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-5hngizeg/fbprophet/\n",
+      "     command: /opt/anaconda3/envs/learn-env/bin/python3.6 -u -c 'import sys, setuptools, tokenize; sys.argv[0] = '\"'\"'/private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-2oe50t74/fbprophet/setup.py'\"'\"'; __file__='\"'\"'/private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-2oe50t74/fbprophet/setup.py'\"'\"';f=getattr(tokenize, '\"'\"'open'\"'\"', open)(__file__);code=f.read().replace('\"'\"'\\r\\n'\"'\"', '\"'\"'\\n'\"'\"');f.close();exec(compile(code, __file__, '\"'\"'exec'\"'\"'))' install --record /private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-record-j5fx2yia/install-record.txt --single-version-externally-managed --compile --install-headers /opt/anaconda3/envs/learn-env/include/python3.6m/fbprophet\n",
+      "         cwd: /private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-2oe50t74/fbprophet/\n",
       "    Complete output (9 lines):\n",
       "    running install\n",
       "    running build\n",
@@ -98,13 +119,12 @@
       "    INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_dfdaf2b8ece8a02eb11f050ec701c0ec NOW.\n",
       "    error: command 'x86_64-apple-darwin13.4.0-clang' failed with exit status 254\n",
       "    ----------------------------------------\u001b[0m\n",
-      "\u001b[31mERROR: Command errored out with exit status 1: /opt/anaconda3/envs/learn-env/bin/python3.6 -u -c 'import sys, setuptools, tokenize; sys.argv[0] = '\"'\"'/private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-5hngizeg/fbprophet/setup.py'\"'\"'; __file__='\"'\"'/private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-5hngizeg/fbprophet/setup.py'\"'\"';f=getattr(tokenize, '\"'\"'open'\"'\"', open)(__file__);code=f.read().replace('\"'\"'\\r\\n'\"'\"', '\"'\"'\\n'\"'\"');f.close();exec(compile(code, __file__, '\"'\"'exec'\"'\"'))' install --record /private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-record-7lr9gxpr/install-record.txt --single-version-externally-managed --compile --install-headers /opt/anaconda3/envs/learn-env/include/python3.6m/fbprophet Check the logs for full command output.\u001b[0m\n",
+      "\u001b[31mERROR: Command errored out with exit status 1: /opt/anaconda3/envs/learn-env/bin/python3.6 -u -c 'import sys, setuptools, tokenize; sys.argv[0] = '\"'\"'/private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-2oe50t74/fbprophet/setup.py'\"'\"'; __file__='\"'\"'/private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-install-2oe50t74/fbprophet/setup.py'\"'\"';f=getattr(tokenize, '\"'\"'open'\"'\"', open)(__file__);code=f.read().replace('\"'\"'\\r\\n'\"'\"', '\"'\"'\\n'\"'\"');f.close();exec(compile(code, __file__, '\"'\"'exec'\"'\"'))' install --record /private/var/folders/39/6xptkcr15mj5c887xkn6ph3c0000gn/T/pip-record-j5fx2yia/install-record.txt --single-version-externally-managed --compile --install-headers /opt/anaconda3/envs/learn-env/include/python3.6m/fbprophet Check the logs for full command output.\u001b[0m\n",
       "\u001b[?25h"
      ]
     }
    ],
    "source": [
-    "!pip install pystan\n",
     "!pip install fbprophet"
    ]
   },
