Draft for getting data from Yahoo Finance

--- a/notebook/draft_1_single_etf.ipynb
+++ b/notebook/draft_1_single_etf.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[yfinance](https://pypi.org/project/yfinance/)"
+    "# How to acquire a single REIT ETF's historical data?"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Access ticker data\n",
+    "# Access ticker data from Yahoo Finance\n",
     "vnq = yf.Ticker('VNQ')"
    ]
   },
@@ -172,7 +172,9 @@
    ],
    "source": [
     "# Want to know the Inception Data of that stock\n",
-    "vnq_dict.get('fundInceptionDate')"
+    "vnq_dict.get('fundInceptionDate')\n",
+    "\n",
+    "# epoch & unix format"
    ]
   },
   {
@@ -577,6 +579,7 @@
     }
    ],
    "source": [
+    "# Check the index\n",
     "data.index"
    ]
   },
@@ -597,6 +600,7 @@
     }
    ],
    "source": [
+    "# Check the size of dataframe\n",
     "data.shape"
    ]
   },
@@ -684,15 +688,16 @@
     }
    ],
    "source": [
+    "# Visualize the chart\n",
     "data['Close'].plot(figsize=(15,9));"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Get the start year of that REIT ETF (steps will be used in another notebook)"
+   ]
   },
   {
    "cell_type": "code",
@@ -777,7 +782,7 @@
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
-   "number_sections": true,
+   "number_sections": false,
    "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
