--- a/notebook/draft_2_multiple_etfs.ipynb
+++ b/notebook/draft_2_multiple_etfs.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How to acquire multiple REIT ETFs' historical data?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -19,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top3 = ['VNQ', 'IYR', 'SCHH']"
+    "# top3 = ['VNQ', 'IYR', 'SCHH']"
    ]
   },
   {
@@ -275,7 +282,6 @@
     "def get_stock_data(symbols):\n",
     "    '''\n",
     "    Acquire the historical data from Yahoo Finance\n",
-    "    for provided stock symbol\n",
     "    '''\n",
     "    \n",
     "    # Access ticker data\n",
@@ -289,8 +295,8 @@
     "\n",
     "def get_data(symbols):\n",
     "    '''\n",
-    "    Acquire the data by calling previous function\n",
-    "    Concatenate the dataframe\n",
+    "    Acquire the data by calling previous function and put them in one dataframe\n",
+    "    \n",
     "    '''\n",
     "    \n",
     "    # Create a blank dataframe\n",
@@ -331,13 +337,6 @@
     "    \n",
     "    return updated_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -904,13 +903,6 @@
    "source": [
     "min(tp28.index)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1873,13 +1865,6 @@
     "new_ticker = new_ticker_df['symbol'].tolist()\n",
     "new_ticker"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
