best lstm on all etfs

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -3283,7 +3283,8 @@
      "height": 1000
     },
     "id": "97-MYelzGTyb",
-    "outputId": "ecd05865-1337-4e95-d5f6-f2062efe1fcc"
+    "outputId": "ecd05865-1337-4e95-d5f6-f2062efe1fcc",
+    "scrolled": false
    },
    "outputs": [
     {
@@ -3555,7 +3556,8 @@
      "height": 1000
     },
     "id": "EY6PQLUqGXKH",
-    "outputId": "21e96250-25a8-4230-c2f4-c56f2060cb7b"
+    "outputId": "21e96250-25a8-4230-c2f4-c56f2060cb7b",
+    "scrolled": false
    },
    "outputs": [
     {
@@ -3827,7 +3829,8 @@
      "height": 1000
     },
     "id": "qmTrMUdfGasu",
-    "outputId": "919619b1-4357-486f-c35d-b9b49eacaded"
+    "outputId": "919619b1-4357-486f-c35d-b9b49eacaded",
+    "scrolled": false
    },
    "outputs": [
     {
@@ -4099,7 +4102,8 @@
      "height": 1000
     },
     "id": "kCb8BQEYGexp",
-    "outputId": "633754ba-f195-4dcb-fe0c-5df2a31bbeb3"
+    "outputId": "633754ba-f195-4dcb-fe0c-5df2a31bbeb3",
+    "scrolled": false
    },
    "outputs": [
     {
@@ -4371,7 +4375,8 @@
      "height": 1000
     },
     "id": "uPG4GChyGjy7",
-    "outputId": "612f0e00-4295-45b8-be09-bb2e932dec12"
+    "outputId": "612f0e00-4295-45b8-be09-bb2e932dec12",
+    "scrolled": false
    },
    "outputs": [
     {
