Add instrucition for function

--- a/notebook/1_Fetch_Data.ipynb
+++ b/notebook/1_Fetch_Data.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Fetch Data\n",
-    "- The purpose of this notebook is to fetch multiple REIT ETFs' historical data from Yahoo Finance and combine them into one dataframe"
+    "The purpose of this notebook is to fetch multiple REIT ETFs' historical data from Yahoo Finance and combine them into one dataframe."
    ]
   },
   {
@@ -21,7 +21,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "# import matplotlib.pyplot as plt\n",
     "\n",
     "import yfinance as yf"
    ]
@@ -129,6 +129,19 @@
    "source": [
     "top28 = ticker_name['Symbol'].tolist()\n",
     "top28[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instruction\n",
+    "1. Function 1\n",
+    "    - This function helps to select REIT ETFs which has certain of historical data\n",
+    "2. Function 2\n",
+    "    - Fetch historical data from Yahoo Finance\n",
+    "3. Function 3\n",
+    "    - Combine the multiple data into a single dataframe"
    ]
   },
   {
