Add instruction for pre-defined function

--- a/notebook/1_Fetch_Data.ipynb
+++ b/notebook/1_Fetch_Data.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Fetch Data\n",
-    "The purpose of this notebook is to fetch multiple REIT ETFs' historical data from Yahoo Finance and combine them into one dataframe."
+    "The purpose of this notebook is to fetch multiple REIT ETFs' historical data from Yahoo Finance and combine them into one dataframe. The data will be used for further analysis in different notebooks."
    ]
   },
   {
