--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -62,29 +62,29 @@
    "source": [
     "### Jupyter Notebook Instruction\n",
     "In the Github repository, there is a \"notebook\" folder. Follow by the order:\n",
-    "1. Fetch_Data.ipynb\n",
+    "1. [Fetch_Data](./notebook/1_Fetch_Data.ipynb)\n",
     "    - The main purpose of this notebook is to fetch mutiple REIT ETFs' historical data from Yahoo Finance and combine them into a single dataframe\n",
     "    - The data set contains `OHLC` (Open, High, Low, Close), `Volume`, `Dividends`, `Stock Splits` and `Ticker`\n",
-    "2. ARIMA.ipynb\n",
+    "2. [ARIMA](./notebook/2_ARIMA.ipynb)\n",
     "    - An ARIMA model was built for VNQ\n",
     "    - Train-Val-Test split\n",
     "        - Train set was used for training the model\n",
     "        - Validation set was used for checking the model performance after ML\n",
     "        - Test set was only used once for checking the model performance on unseen data\n",
-    "3. FBProphet.ipynb\n",
+    "3. [FBProphet](./notebook/3_FBProphet.ipynb)\n",
     "    - A FBProphet model was built for VNQ\n",
     "    - (Due to the nature of FBProphet, data split is slightly different than other models)\n",
     "    - Train-Test Split\n",
     "        - Train set was used for training the model\n",
     "        - Test set was only used once for checking the model performance on unseen data\n",
     "    \n",
-    "4. LSTM.ipynb\n",
+    "4. [LSTM](./notebook/4_LSTM.ipynb)\n",
     "    - A LSTM model was built for VNQ\n",
     "    - Train-Val-Test split\n",
     "        - Train set was used for training the model\n",
     "        - Validation set was used for tuning the model\n",
     "        - Test set was only used once for checking the model performance on unseen data\n",
-    "5. Classification.ipynb\n",
+    "5. [Classification](./notebook/5_Classification.ipynb)\n",
     "    - <b>nusvc_clf</b>, the best model, was selected among 9 differnent classfiers for VNQ\n",
     "    - Train-Val-Test split\n",
     "        - Train set was used for training the model\n",
@@ -93,7 +93,7 @@
     "\n",
     "\n",
     "### Note\n",
-    "- For convinence, there is a py file which contains pre-written functions\n",
+    "- For convinence, there is a [py file](./util.py) which contains pre-written functions\n",
     "- Both regression and classification models are built on <b>VNQ</b>\n",
     "- Full detail on how to tune the model can be viewed in the corresponding notebook\n",
     "\n"
@@ -7557,7 +7557,7 @@
     "id": "FvIF_1nmlo1V"
    },
    "source": [
-    "|  Model | MAE | RMSE | R^2 | Accuracy | F1(0) | F1(1) |\n",
+    "|  ETF | MAE | RMSE | R^2 | Accuracy | F1(0) | F1(1) |\n",
     "| :---: | :---: |:---: | :---: | :---: | :---: | :---: |\n",
     "| VNQ | 0.7335 | 0.9228 | 0.7897 | 0.9091 | 0.90 | 0.92 |\n",
     "| IYR | 0.6964 | 0.8815 | 0.7768 | 0.9545 | 0.94 | 0.96 |\n",
@@ -7582,13 +7582,16 @@
     "id": "JT2NF5RpjXZ2"
    },
    "source": [
+    "The best LSTM model and NuSVC models were applied to 15 REIT ETFs' test set.<br>\n",
+    "<br>\n",
     "<b>Regression</b>\n",
-    "- The best LSTM model was applied to 15 REIT ETFs' test set. By looking at the MAE and RMSE, LSTM can handle forecasting well by maintain small predition errors. \n",
+    "- By looking at the MAE and RMSE, LSTM can handle forecasting well by maintain small predition errors. \n",
+    "- And most of the R2 achieved above 70%\n",
     "    - This could be due to the nature of LSTM. LSTM chooses to remember relevant information and forget irrelevant during sequences processing \n",
     "\n",
     "<b>Clssification</b>\n",
-    "- The best NuSVC classifier was applied to 15 REIT ETFs' test set. By looking at the test accuracy, only 9 of 15 ETFs have acceptable results\n",
-    "    - This could be due to the nature of NuSVC classifier. For binary classification, NuSVC creates a hyperplane to separate different classes. The test size contains 22 days from 5/24/2021 to 6/23/2021. 15 ETFs' were in different price ranges. Those have a closer price range with VNQ are more likely to generate good results. In contrast, those price range far away from VNQ generate results that could below the expectation"
+    "- By looking at the test accuracy, 9 of 15 ETFs have acceptable results\n",
+    "    - This could be due to the nature of NuSVC classifier. For binary classification, NuSVC creates a hyperplane to separate different classes. The test size contains 22 days from 5/24/2021 to 6/23/2021. (See the 1st \"close price\" image) 15 ETFs' were in different price ranges. Those have a closer price range with VNQ are more likely to generate good results. In contrast, those price range far away from VNQ generate results that could below the expectation"
    ]
   },
   {
@@ -7607,16 +7610,6 @@
    },
    "source": [
     "By analyzing and building models on VNQ time series, LSTM model was selected for regression and NuSVC model was selected for classification. Both models were applied to the rest of the 14 REIT ETFs to see how the model is generalizable for different time series. LSTM is a good fit for price prediction no matter the time series has either an increasing trend or a decreasing trend. NuSVC is more like to fit for time series which have a closer price range with VNQ."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "7YLqGRor21Pc"
-   },
-   "source": [
-    "### Recommendation\n",
-    "- <b>Update</b>: Update the model periodically so that the model can learn new pattern"
    ]
   },
   {
